--- a/views/store/bookList.ejs
+++ b/views/store/bookList.ejs
@@ -9,12 +9,15 @@
             <% {addNewBook.forEach((book)=>{%>
                 <div class="shadow-md rounded-md">
                     <img src="<%=book.image%>" alt="<%= book.name %>" class=" max-w-xl w-full h-[400px] object-cover rounded-md"/>
-                    <div class="p-4 space-y-2">
+                    <div class="p-4 space-y-2 ">
                         <h1 class="text-xl font-bold"><%= book.name %></h1>
                         <p class="text-lg"><%= book.author %></p>
                         <p class="text-lg">$<%= book.price %></p>
-                        <button class="text-lg bg-pink-500 text-white w-full py-2 px-4" >View Details</button>
-                        <button class="text-lg bg-pink-500 text-white w-full py-2 px-4" >Add To Cart</button>
+                        <div class="flex items-center gap-3">
+
+                            <a href="/book-list/<%=book.id%>" class="text-lg bg-pink-500 text-white w-full py-2 px-4 cursor-pointer text-center">View Details</a>
+                            <button class="text-lg bg-pink-500 text-white w-full py-2 px-4" >Add To Cart</button>
+                        </div>
                     </div>
                 </div>
                 <% })}%>
