book detaisl page done and dynamic path done

--- a/views/store/bookDetails.ejs
+++ b/views/store/bookDetails.ejs
@@ -6,6 +6,16 @@
             <h1 class="text-2xl font-bold  text-center">Book Details</h1>
             <p class="text-lg  text-center">Book Details will appear here</p>
         </div>
+        <div class=" flex flex-col justify-center items-center py-6">
+            <img src="<%=book.image%>" alt="<%= book.name %>" class=" max-w-xl w-full h-full object-cover rounded-md"/>
+                <div class="py-4 space-y-2  max-w-xl  w-full">
+                    <h1 class="text-xl font-bold"><%= book.name %></h1>
+                    <p class="text-lg"><%= book.author %></p>
+                    <p class="text-lg">$<%= book.price %></p>
+                    <button class="text-lg bg-pink-500 text-white w-full py-2 px-4 cursor-pointer" >Add To Cart</button>
+                    <button class="text-lg bg-pink-500 text-white w-full py-2 px-4 cursor-pointer" >Add To Favourite</button>
+                </div>
+            </div>
     </div>
 </body>
 </html>
