--- a/views/store/wishlist.ejs
+++ b/views/store/wishlist.ejs
@@ -3,8 +3,8 @@
     <%- include("../partials/header") %>
     <div class="py-8">
         <div class="space-y-4">
-            <h1 class="text-2xl font-bold  text-center">My Favourites</h1>
-            <p class="text-lg  text-center">My Favourites will appear here</p>
+            <h1 class="text-2xl font-bold  text-center">Wishlist</h1>
+            <p class="text-lg  text-center">Wishlist will appear here</p>
         </div>
     </div>
 </body>
