wishlist functioanlity , ui done, how to add to wishlist along with details

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
   <div
     class="cursor-pointer <%= currentPage === 'My Favourite' ? 'bg-pink-400 py-2 px-3 rounded-md text-white transition-all ease-in duration-300' : 'bg-pink-300' %>"
   >
-    <a href="/my-favourite">
+    <a href="/wishlist">
       <img
         src="https://cdn-icons-png.flaticon.com/512/142/142241.png"
         alt="Favourites-icon"
