--- a/views/store/wishlist.ejs
+++ b/views/store/wishlist.ejs
@@ -1,10 +1,25 @@
 <%- include("../partials/title")%>
 <body>
     <%- include("../partials/header") %>
-    <div class="py-8">
+    <div class="py-8 space-y-8">
         <div class="space-y-4">
             <h1 class="text-2xl font-bold  text-center">Wishlist</h1>
             <p class="text-lg  text-center">Wishlist will appear here</p>
+        </div>
+      <div class="grid grid-cols-3 gap-6 max-w-6xl mx-auto">
+            <% {wishlistBooks.forEach((book)=>{%>
+                <div class="shadow-md rounded-md">
+                    <img src="<%=book.image%>" alt="<%= book.name %>" class=" max-w-xl w-full h-[400px] object-cover rounded-md"/>
+                    <div class="p-4 space-y-2 ">
+                        <h1 class="text-xl font-bold"><%= book.name %></h1>
+                        <p class="text-lg"><%= book.author %></p>
+                        <p class="text-lg">$<%= book.price %></p>
+                        <div class="flex items-center gap-3">
+                            <a href="/book-list/<%=book.id%>" class="text-lg bg-pink-500 text-white w-full py-2 px-4 cursor-pointer text-center flex-1">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <% })}%>
         </div>
     </div>
 </body>
